Corrects the alignment of the 'select' component

--- a/seo-toolkit/static/css/posts.css
+++ b/seo-toolkit/static/css/posts.css
@@ -6,76 +6,76 @@
 /* Layout helpers
 ----------------------------------*/
 .wp-admin .seo-toolkit-tabs .ui-helper-hidden {
-	display: none;
+    display: none;
 }
 .wp-admin .seo-toolkit-tabs .ui-helper-hidden-accessible {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 }
 .wp-admin .seo-toolkit-tabs .ui-helper-reset {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	outline: 0;
-	line-height: 1.3;
-	text-decoration: none;
-	font-size: 100%;
-	list-style: none;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    line-height: 1.3;
+    text-decoration: none;
+    font-size: 100%;
+    list-style: none;
 }
 .wp-admin .seo-toolkit-tabs .ui-helper-clearfix:before,
 .wp-admin .seo-toolkit-tabs .ui-helper-clearfix:after {
-	content: "";
-	display: table;
-	border-collapse: collapse;
+    content: "";
+    display: table;
+    border-collapse: collapse;
 }
 .wp-admin .seo-toolkit-tabs .ui-helper-clearfix:after {
-	clear: both;
+    clear: both;
 }
 .wp-admin .seo-toolkit-tabs .ui-helper-zfix {
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	position: absolute;
-	opacity: 0;
-	filter:Alpha(Opacity=0); /* support: IE8 */
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    opacity: 0;
+    filter:Alpha(Opacity=0); /* support: IE8 */
 }
 
 .wp-admin .seo-toolkit-tabs .ui-front {
-	z-index: 100;
+    z-index: 100;
 }
 
 
 /* Interaction Cues
 ----------------------------------*/
 .wp-admin .seo-toolkit-tabs .ui-state-disabled {
-	cursor: default !important;
-	pointer-events: none;
+    cursor: default !important;
+    pointer-events: none;
 }
 
 
 /* Icons
 ----------------------------------*/
 .wp-admin .seo-toolkit-tabs .ui-icon {
-	display: inline-block;
-	vertical-align: middle;
-	margin-top: -.25em;
-	position: relative;
-	text-indent: -99999px;
-	overflow: hidden;
-	background-repeat: no-repeat;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: -.25em;
+    position: relative;
+    text-indent: -99999px;
+    overflow: hidden;
+    background-repeat: no-repeat;
 }
 
 .wp-admin .seo-toolkit-tabs .ui-widget-icon-block {
-	left: 50%;
-	margin-left: -8px;
-	display: block;
+    left: 50%;
+    margin-left: -8px;
+    display: block;
 }
 
 /* Misc visuals
@@ -83,52 +83,52 @@
 
 /* Overlays */
 .wp-admin .seo-toolkit-tabs .ui-widget-overlay {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs {
-	position: relative;/* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
-	padding: .2em;
+    position: relative;/* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
+    padding: .2em;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-nav {
-	margin: 0;
-	padding: .2em .2em 0;
+    margin: 0;
+    padding: .2em .2em 0;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-nav li {
-	list-style: none;
-	float: left;
-	position: relative;
-	top: 0;
-	margin: 1px .2em 0 0;
-	border-bottom-width: 0;
-	padding: 0;
-	white-space: nowrap;
+    list-style: none;
+    float: left;
+    position: relative;
+    top: 0;
+    margin: 1px .2em 0 0;
+    border-bottom-width: 0;
+    padding: 0;
+    white-space: nowrap;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-nav .ui-tabs-anchor {
-	float: left;
-	padding: .5em 1em;
-	text-decoration: none;
+    float: left;
+    padding: .5em 1em;
+    text-decoration: none;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-nav li.ui-tabs-active {
-	margin-bottom: -1px;
-	padding-bottom: 1px;
+    margin-bottom: -1px;
+    padding-bottom: 1px;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-nav li.ui-tabs-active .ui-tabs-anchor,
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-nav li.ui-state-disabled .ui-tabs-anchor,
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-nav li.ui-tabs-loading .ui-tabs-anchor {
-	cursor: text;
+    cursor: text;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active .ui-tabs-anchor {
-	cursor: pointer;
+    cursor: pointer;
 }
 .wp-admin .seo-toolkit-tabs .ui-tabs .ui-tabs-panel {
-	display: block;
-	border-width: 0;
-	padding: 1em 1.4em;
-	background: none;
+    display: block;
+    border-width: 0;
+    padding: 1em 1.4em;
+    background: none;
 }
 
 /* Extra small devices (portrait phones, less than 576px) */
@@ -290,3 +290,8 @@
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {}
+
+/* WordPress 5.4 */
+.wp-admin .seo-toolkit-tabs .form-field select {
+    max-width: 100% !important;
+}
